--- a/pure-conjurer.cabal
+++ b/pure-conjurer.cabal
@@ -51,6 +51,7 @@ library
     Pure.Conjurer.Fieldable
     Pure.Conjurer.Formable
     Pure.Conjurer.Index
+    Pure.Conjurer.Interaction
     Pure.Conjurer.Listable
     Pure.Conjurer.Key
     Pure.Conjurer.Name
