Rename db to conjure and add a Conjurable constraint type.

--- a/pure-conjurer.cabal
+++ b/pure-conjurer.cabal
@@ -103,6 +103,7 @@ library
     FunctionalDependencies
     ViewPatterns
     BangPatterns
+    ConstraintKinds
   
   if !impl(ghcjs)
     build-depends:
